projects/vb6parse/snapshots/syntax/library/statements/file_copy/filecopy_at_module_level.snap
---
source: projects/vb6parse/src/syntax/library/statements/file_operations/file_copy.rs
expression: tree
---
root:
  kind: Root
  children:
    - kind: FileCopyStatement
      children:
        - kind: FileCopyKeyword
          text: FileCopy
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"old.dat\""
        - kind: Comma
          text: ","
        - kind: Whitespace
          text: " "
        - kind: StringLiteralExpression
          children:
            - kind: StringLiteral
              text: "\"new.dat\""
    - kind: Newline
      text: "\n"
